; ModuleID = '/home/carl/AnghaBench/mozjpeg/extr_turbojpeg.c_tjDecompress.c'
source_filename = "/home/carl/AnghaBench/mozjpeg/extr_turbojpeg.c_tjDecompress.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TJ_YUV = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tjDecompress(i32 %0, i8* %1, i64 %2, i8* %3, i32 %4, i32 %5, i32 %6, i32 %7, i32 %8) #0 {
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  %13 = alloca i64, align 8
  %14 = alloca i8*, align 8
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  store i32 %0, i32* %11, align 4
  store i8* %1, i8** %12, align 8
  store i64 %2, i64* %13, align 8
  store i8* %3, i8** %14, align 8
  store i32 %4, i32* %15, align 4
  store i32 %5, i32* %16, align 4
  store i32 %6, i32* %17, align 4
  store i32 %7, i32* %18, align 4
  store i32 %8, i32* %19, align 4
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* @TJ_YUV, align 4
  %22 = and i32 %20, %21
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %31

24:                                               ; preds = %9
  %25 = load i32, i32* %11, align 4
  %26 = load i8*, i8** %12, align 8
  %27 = load i64, i64* %13, align 8
  %28 = load i8*, i8** %14, align 8
  %29 = load i32, i32* %19, align 4
  %30 = call i32 @tjDecompressToYUV(i32 %25, i8* %26, i64 %27, i8* %28, i32 %29)
  store i32 %30, i32* %10, align 4
  br label %44

31:                                               ; preds = %9
  %32 = load i32, i32* %11, align 4
  %33 = load i8*, i8** %12, align 8
  %34 = load i64, i64* %13, align 8
  %35 = load i8*, i8** %14, align 8
  %36 = load i32, i32* %15, align 4
  %37 = load i32, i32* %16, align 4
  %38 = load i32, i32* %17, align 4
  %39 = load i32, i32* %18, align 4
  %40 = load i32, i32* %19, align 4
  %41 = call i32 @getPixelFormat(i32 %39, i32 %40)
  %42 = load i32, i32* %19, align 4
  %43 = call i32 @tjDecompress2(i32 %32, i8* %33, i64 %34, i8* %35, i32 %36, i32 %37, i32 %38, i32 %41, i32 %42)
  store i32 %43, i32* %10, align 4
  br label %44

44:                                               ; preds = %31, %24
  %45 = load i32, i32* %10, align 4
  ret i32 %45
}

declare dso_local i32 @tjDecompressToYUV(i32, i8*, i64, i8*, i32) #1

declare dso_local i32 @tjDecompress2(i32, i8*, i64, i8*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @getPixelFormat(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
